Replace placeholder image with local school logo

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
         <div class="app-footer">
             <div class="footer-logo">
                 <!-- PLACEHOLDER IMAGE -->
-                <img src="https://picsum.photos/seed/paciran/100/100" alt="School Logo">
+                <img src="20260122_211911.jpg" alt="School Logo">
             </div>
             <div class="footer-text">
                 <div class="f-line-1">MA MUHAMMADIYAH 1 PACIRAN</div>
